Fix flex overlap

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -28,5 +28,7 @@
     flex-wrap: wrap;
     align-items: flex-start;
     justify-content: center;
+    min-height: min-content;
+    margin: auto;
   }
 }
